Fixed selecting list-item animated transition not showing

--- a/frontend/src/assets/css/common/controls.css
+++ b/frontend/src/assets/css/common/controls.css
@@ -76,17 +76,6 @@ a {
     color: red;
 }
 
-.active {
-    transition: 0.075s;
-    background: var(--accent1);
-    border-left: 3px solid var(--accent3);
-    color: var(--text-clr1);
-}
-
-.active:hover {
-    background: var(--accent1) !important;
-}
-
 .description {
     resize: none;
     padding-top: 14px;
